--- a/rs/nervous_system/integration_tests/BUILD.bazel
+++ b/rs/nervous_system/integration_tests/BUILD.bazel
@@ -13,10 +13,10 @@ BASE_DEPENDENCIES = [
     "//rs/ledger_suite/icrc1/tokens_u64",
     "//rs/nervous_system/agent",
     "//rs/nervous_system/clients",
-    "//rs/nervous_system/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
     "//rs/nervous_system/proto",
     "//rs/nervous_system/root",
-    "//rs/nns/common",
+    "//rs/nns/common:ic_nns_common",
     "//rs/nns/governance/api",
     "//rs/nns/sns-wasm",
     "//rs/sns/governance",
