--- a/rs/nns/cmc/BUILD.bazel
+++ b/rs/nns/cmc/BUILD.bazel
@@ -11,9 +11,9 @@ DEPENDENCIES = [
     "//rs/crypto/tree_hash",
     "//rs/ledger_suite/common/ledger_core",
     "//rs/ledger_suite/icp:icp_ledger",
-    "//rs/nervous_system/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
     "//rs/nervous_system/governance",
-    "//rs/nns/common",
+    "//rs/nns/common:ic_nns_common",
     "//rs/nns/constants",
     "//rs/protobuf",
     "//rs/rust_canisters/dfn_candid",
