--- a/rs/nns/gtc/BUILD.bazel
+++ b/rs/nns/gtc/BUILD.bazel
@@ -18,8 +18,8 @@ DEPENDENCIES = [
     "//rs/crypto/secp256k1",
     "//rs/crypto/sha2",
     "//rs/ledger_suite/icp:icp_ledger",
-    "//rs/nervous_system/common",
-    "//rs/nns/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
+    "//rs/nns/common:ic_nns_common",
     "//rs/nns/constants",
     "//rs/nns/governance/api",
     "//rs/nns/gtc_accounts",
