--- a/rs/nns/integration_tests/BUILD.bazel
+++ b/rs/nns/integration_tests/BUILD.bazel
@@ -11,10 +11,10 @@ BASE_DEPENDENCIES = [
     "//rs/ledger_suite/icp:icp_ledger",
     "//rs/limits",
     "//rs/nervous_system/clients",
-    "//rs/nervous_system/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
     "//rs/nervous_system/common/test_keys",
     "//rs/nns/cmc",
-    "//rs/nns/common",
+    "//rs/nns/common:ic_nns_common",
     "//rs/nns/governance/api",
     "//rs/nns/governance/init",
     "//rs/nns/handlers/lifeline/impl:lifeline",
