--- a/rs/replay/BUILD.bazel
+++ b/rs/replay/BUILD.bazel
@@ -19,8 +19,8 @@ DEPENDENCIES = [
     "//rs/messaging",
     "//rs/monitoring/logger",
     "//rs/monitoring/metrics",
-    "//rs/nervous_system/common",
-    "//rs/nns/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
+    "//rs/nns/common:ic_nns_common",
     "//rs/nns/constants",
     "//rs/nns/governance/api",
     "//rs/protobuf",
