--- a/rs/tests/consensus/utils/BUILD.bazel
+++ b/rs/tests/consensus/utils/BUILD.bazel
@@ -11,10 +11,10 @@ rust_library(
         "//rs/canister_client",
         "//rs/config",
         "//rs/http_utils",
-        "//rs/nervous_system/common",
+        "//rs/nervous_system/common:ic_nervous_system_common",
         "//rs/nervous_system/common/test_keys",
         "//rs/nns/cmc",
-        "//rs/nns/common",
+        "//rs/nns/common:ic_nns_common",
         "//rs/nns/constants",
         "//rs/nns/governance/api",
         "//rs/protobuf",
