--- a/rs/nervous_system/agent/BUILD.bazel
+++ b/rs/nervous_system/agent/BUILD.bazel
@@ -6,7 +6,7 @@ DEPENDENCIES = [
     # Keep sorted.
     "//packages/pocket-ic",
     "//rs/nervous_system/clients",
-    "//rs/nns/common",
+    "//rs/nns/common:ic_nns_common",
     "//rs/nns/constants",
     "//rs/nns/governance/api",
     "//rs/nns/sns-wasm",
