--- a/rs/nervous_system/common/BUILD.bazel
+++ b/rs/nervous_system/common/BUILD.bazel
@@ -70,19 +70,18 @@ cargo_build_script(
 )
 
 rust_library(
-    name = "common",
+    name = "ic_nervous_system_common",
     srcs = glob(["src/**/*.rs"]),
     aliases = ALIASES,
-    crate_name = "ic_nervous_system_common",
     proc_macro_deps = MACRO_DEPENDENCIES,
     version = "0.9.0",
     deps = DEPENDENCIES + [":build_script"],
 )
 
 rust_test(
-    name = "common_test",
+    name = "ic_nervous_system_common_test",
     aliases = ALIASES,
-    crate = ":common",
+    crate = ":ic_nervous_system_common",
     proc_macro_deps = MACRO_DEPENDENCIES + MACRO_DEV_DEPENDENCIES,
     deps = DEPENDENCIES + DEV_DEPENDENCIES + [":build_script"],
 )
