--- a/rs/nervous_system/common/test_utils/BUILD.bazel
+++ b/rs/nervous_system/common/test_utils/BUILD.bazel
@@ -17,7 +17,7 @@ DEPENDENCIES = [
     # Keep sorted.
     "//packages/icrc-ledger-types:icrc_ledger_types",
     "//rs/ledger_suite/icp:icp_ledger",
-    "//rs/nervous_system/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
     "//rs/rust_canisters/dfn_core",
     "@crate_index//:futures",
     "@crate_index//:ic-wasm",
