--- a/rs/nervous_system/neurons_fund/BUILD.bazel
+++ b/rs/nervous_system/neurons_fund/BUILD.bazel
@@ -4,7 +4,7 @@ package(default_visibility = ["//visibility:public"])
 
 DEPENDENCIES = [
     # Keep sorted.
-    "//rs/nervous_system/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
     "@crate_index//:lazy_static",
     "@crate_index//:rust_decimal",
     "@crate_index//:serde",
