--- a/rs/nns/governance/BUILD.bazel
+++ b/rs/nns/governance/BUILD.bazel
@@ -34,7 +34,7 @@ DEPENDENCIES = [
     "//rs/ledger_suite/common/ledger_core",
     "//rs/ledger_suite/icp:icp_ledger",
     "//rs/nervous_system/clients",
-    "//rs/nervous_system/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
     "//rs/nervous_system/governance",
     "//rs/nervous_system/neurons_fund",
     "//rs/nervous_system/proto",
@@ -42,7 +42,7 @@ DEPENDENCIES = [
     "//rs/nervous_system/runtime",
     "//rs/nervous_system/temporary",
     "//rs/nns/cmc",
-    "//rs/nns/common",
+    "//rs/nns/common:ic_nns_common",
     "//rs/nns/constants",
     "//rs/nns/governance/api",
     "//rs/nns/governance/init",
@@ -323,8 +323,8 @@ rust_bench(
         # Keep sorted.
         ":governance",
         "//rs/ledger_suite/icp:icp_ledger",
-        "//rs/nervous_system/common",
-        "//rs/nns/common",
+        "//rs/nervous_system/common:ic_nervous_system_common",
+        "//rs/nns/common:ic_nns_common",
         "//rs/types/base_types",
         "@crate_index//:criterion",
         "@crate_index//:futures",
