--- a/rs/nns/governance/init/BUILD.bazel
+++ b/rs/nns/governance/init/BUILD.bazel
@@ -6,9 +6,9 @@ package(default_visibility = ["//visibility:public"])
 DEPENDENCIES = [
     # Keep sorted.
     "//rs/ledger_suite/icp:icp_ledger",
-    "//rs/nervous_system/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
     "//rs/nervous_system/common/test_keys",
-    "//rs/nns/common",
+    "//rs/nns/common:ic_nns_common",
     "//rs/nns/governance/api",
     "//rs/types/base_types",
     "@crate_index//:csv",
