--- a/rs/sns/governance/BUILD.bazel
+++ b/rs/sns/governance/BUILD.bazel
@@ -21,7 +21,7 @@ DEPENDENCIES = [
     "//rs/ledger_suite/icrc1/ledger",
     "//rs/nervous_system/clients",
     "//rs/nervous_system/collections/union_multi_map",
-    "//rs/nervous_system/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
     "//rs/nervous_system/common/validation",
     "//rs/nervous_system/governance",
     "//rs/nervous_system/lock",
