--- a/rs/sns/integration_tests/BUILD.bazel
+++ b/rs/sns/integration_tests/BUILD.bazel
@@ -14,7 +14,7 @@ BASE_DEPENDENCIES = [
     "//rs/ledger_suite/icp/ledger",
     "//rs/ledger_suite/icrc1",
     "//rs/ledger_suite/icrc1/ledger",
-    "//rs/nervous_system/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
     "//rs/nervous_system/common/test_keys",
     "//rs/nns/cmc",
     "//rs/nns/constants",
@@ -66,7 +66,7 @@ BASE_DEV_DEPENDENCIES = [
     "//rs/nervous_system/clients",
     "//rs/nervous_system/proto",
     "//rs/nervous_system/root",
-    "//rs/nns/common",
+    "//rs/nns/common:ic_nns_common",
     "//rs/protobuf",
     "//rs/rust_canisters/http_types",
     "//rs/rust_canisters/on_wire",
@@ -126,7 +126,7 @@ rust_canister(
         # Keep sorted.
         "//packages/icrc-ledger-types:icrc_ledger_types",
         "//rs/ledger_suite/icrc1",
-        "//rs/nervous_system/common",
+        "//rs/nervous_system/common:ic_nervous_system_common",
         "//rs/rust_canisters/dfn_core",
         "//rs/sns/governance",
         "//rs/types/base_types",
