--- a/rs/sns/swap/BUILD.bazel
+++ b/rs/sns/swap/BUILD.bazel
@@ -19,7 +19,7 @@ DEPENDENCIES = [
     "//rs/ledger_suite/icp:icp_ledger",
     "//rs/nervous_system/canisters",
     "//rs/nervous_system/clients",
-    "//rs/nervous_system/common",
+    "//rs/nervous_system/common:ic_nervous_system_common",
     "//rs/nervous_system/neurons_fund",
     "//rs/nervous_system/proto",
     "//rs/nervous_system/runtime",
