--- a/rs/tests/consensus/upgrade/BUILD.bazel
+++ b/rs/tests/consensus/upgrade/BUILD.bazel
@@ -5,10 +5,9 @@ load("//rs/tests:system_tests.bzl", "system_test_nns")
 package(default_visibility = ["//rs:system-tests-pkg"])
 
 rust_library(
-    name = "common",
+    name = "ic_consensus_system_test_upgrade_common",
     testonly = True,
     srcs = ["common.rs"],
-    crate_name = "ic_consensus_system_test_upgrade_common",
     deps = [
         # Keep sorted.
         "//rs/registry/subnet_type",
@@ -43,7 +42,7 @@ system_test_nns(
         MAINNET_REVISION_RUNTIME_DEPS,
     deps = [
         # Keep sorted.
-        ":common",
+        ":ic_consensus_system_test_upgrade_common",
         "//rs/registry/subnet_features",
         "//rs/registry/subnet_type",
         "//rs/tests/consensus/tecdsa/utils:ic_consensus_threshold_sig_system_test_utils",
@@ -73,7 +72,7 @@ system_test_nns(
         MAINNET_REVISION_RUNTIME_DEPS,
     deps = [
         # Keep sorted.
-        ":common",
+        ":ic_consensus_system_test_upgrade_common",
         "//rs/registry/subnet_type",
         "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
@@ -98,7 +97,7 @@ system_test_nns(
         MAINNET_REVISION_RUNTIME_DEPS,
     deps = [
         # Keep sorted.
-        ":common",
+        ":ic_consensus_system_test_upgrade_common",
         "//rs/registry/subnet_features",
         "//rs/registry/subnet_type",
         "//rs/tests/consensus/tecdsa/utils:ic_consensus_threshold_sig_system_test_utils",
@@ -125,7 +124,7 @@ system_test_nns(
         MAINNET_REVISION_RUNTIME_DEPS,
     deps = [
         # Keep sorted.
-        ":common",
+        ":ic_consensus_system_test_upgrade_common",
         "//rs/registry/subnet_features",
         "//rs/registry/subnet_type",
         "//rs/tests/consensus/tecdsa/utils:ic_consensus_threshold_sig_system_test_utils",
@@ -150,7 +149,7 @@ system_test_nns(
     runtime_deps = GUESTOS_RUNTIME_DEPS + UNIVERSAL_VM_RUNTIME_DEPS,
     deps = [
         # Keep sorted.
-        "//rs/nns/common",
+        "//rs/nns/common:ic_nns_common",
         "//rs/registry/subnet_type",
         "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
@@ -176,7 +175,7 @@ system_test_nns(
         # Keep sorted.
         "//rs/canister_client",
         "//rs/nervous_system/common/test_keys",
-        "//rs/nns/common",
+        "//rs/nns/common:ic_nns_common",
         "//rs/registry/nns_data_provider",
         "//rs/registry/subnet_type",
         "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
