--- a/rs/tests/driver/BUILD.bazel
+++ b/rs/tests/driver/BUILD.bazel
@@ -57,12 +57,12 @@ rust_library(
         "//rs/ledger_suite/icrc1/ledger",
         "//rs/limits",
         "//rs/nervous_system/clients",
-        "//rs/nervous_system/common",
+        "//rs/nervous_system/common:ic_nervous_system_common",
         "//rs/nervous_system/common/test_keys",
         "//rs/nervous_system/proto",
         "//rs/nervous_system/root",
         "//rs/nns/cmc",
-        "//rs/nns/common",
+        "//rs/nns/common:ic_nns_common",
         "//rs/nns/constants",
         "//rs/nns/governance/api",
         "//rs/nns/gtc",
