--- a/rs/tests/nested/BUILD.bazel
+++ b/rs/tests/nested/BUILD.bazel
@@ -8,7 +8,7 @@ DEPENDENCIES = [
     # Keep sorted.
     "//rs/canister_client",
     "//rs/nervous_system/common/test_keys",
-    "//rs/nns/common",
+    "//rs/nns/common:ic_nns_common",
     "//rs/nns/test_utils:ic_nns_test_utils",
     "//rs/registry/subnet_type",
     "//rs/rust_canisters/canister_test",
