--- a/rs/tests/nns/ic_mainnet_nns_recovery/BUILD.bazel
+++ b/rs/tests/nns/ic_mainnet_nns_recovery/BUILD.bazel
@@ -13,10 +13,10 @@ rust_library(
         "//rs/canister_client",
         "//rs/canister_client/sender",
         "//rs/ledger_suite/icp:icp_ledger",
-        "//rs/nervous_system/common",
+        "//rs/nervous_system/common:ic_nervous_system_common",
         "//rs/nervous_system/common/test_keys",
         "//rs/nns/cmc",
-        "//rs/nns/common",
+        "//rs/nns/common:ic_nns_common",
         "//rs/nns/governance/api",
         "//rs/nns/sns-wasm",
         "//rs/nns/test_utils:ic_nns_test_utils",
