--- a/rs/ic_os/os_tools/guestos_tool/Cargo.toml
+++ b/rs/ic_os/os_tools/guestos_tool/Cargo.toml
@@ -15,5 +15,4 @@ indoc = "1.0.9"
 itertools = { workspace = true }
 network = { path = "../../network" }
 regex = { workspace = true }
-utils = { path = "../../utils" }
-
+icos_utils = { path = "../../utils" }
