--- a/rs/ic_os/config/Cargo.toml
+++ b/rs/ic_os/config/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 anyhow = { workspace = true }
 ic-types = { path = "../../types/types" }
 clap = { workspace = true }
-utils = { path = "../utils" }
+icos_utils = { path = "../utils" }
 url = { workspace = true }
 serde_json = { workspace = true }
 serde = { workspace = true }
