--- a/rs/ic_os/os_tools/setupos_tool/Cargo.toml
+++ b/rs/ic_os/os_tools/setupos_tool/Cargo.toml
@@ -12,4 +12,4 @@ anyhow = { workspace = true }
 clap = { workspace = true }
 config = { path = "../../config" }
 network = { path = "../../network" }
-utils = { path = "../../utils" }
+icos_utils = { path = "../../utils" }
