feat(PocketIC): make PocketIC library run on Windows seemlessly

--- a/packages/pocket-ic/Cargo.toml
+++ b/packages/pocket-ic/Cargo.toml
@@ -40,6 +40,9 @@ tracing = { workspace = true }
 tracing-appender = { workspace = true }
 tracing-subscriber = { workspace = true }
 
+[target.'cfg(windows)'.dependencies]
+wslpath = "0.0.2"
+
 [dev-dependencies]
 candid_parser = { workspace = true }
 ed25519-dalek = { workspace = true }
