--- a/packages/pocket-ic/Cargo.toml
+++ b/packages/pocket-ic/Cargo.toml
@@ -19,6 +19,9 @@ include = [
 authors.workspace = true
 edition.workspace = true
 
+[lib]
+doctest = false
+
 [dependencies]
 base64 = { workspace = true }
 candid = "^0.10.2"
