--- a/packages/pocket-ic/Cargo.toml
+++ b/packages/pocket-ic/Cargo.toml
@@ -21,7 +21,7 @@ edition.workspace = true
 
 [dependencies]
 base64 = { workspace = true }
-candid = "^0.10.2"
+candid = { workspace = true }
 hex = { workspace = true }
 ic-agent = { workspace = true }
 ic-transport-types = { workspace = true }
