--- a/rs/pocket_ic_tests/Cargo.toml
+++ b/rs/pocket_ic_tests/Cargo.toml
@@ -10,7 +10,9 @@ documentation.workspace = true
 
 [dependencies]
 ic-config = { path = "../config" }
+ic-error-types = { path = "../types/error_types" }
 ic-registry-routing-table = { path = "../registry/routing_table" }
 ic-registry-subnet-type = { path = "../registry/subnet_type" }
 ic-state-machine-tests = { path = "../state_machine_tests" }
+ic-types = { path = "../types/types" }
 pocket-ic = { path = "../../packages/pocket-ic" }
