--- a/rs/replica_tests/BUILD.bazel
+++ b/rs/replica_tests/BUILD.bazel
@@ -16,6 +16,7 @@ DEPENDENCIES = [
     "//rs/interfaces/state_manager",
     "//rs/monitoring/metrics",
     "//rs/monitoring/tracing",
+    "//rs/pocket_ic_tests",
     "//rs/prep",
     "//rs/protobuf",
     "//rs/registry/fake",
@@ -25,7 +26,6 @@ DEPENDENCIES = [
     "//rs/registry/subnet_type",
     "//rs/replica:replica_lib",
     "//rs/replicated_state",
-    "//rs/state_machine_tests",
     "//rs/test_utilities",
     "//rs/test_utilities/logger",
     "//rs/test_utilities/types",
