--- a/rs/replica_tests/Cargo.toml
+++ b/rs/replica_tests/Cargo.toml
@@ -22,6 +22,7 @@ ic-interfaces-registry = { path = "../interfaces/registry" }
 ic-interfaces-state-manager = { path = "../interfaces/state_manager" }
 ic-management-canister-types = { path = "../types/management_canister_types" }
 ic-metrics = { path = "../monitoring/metrics" }
+ic-pocket-ic-tests = { path = "../pocket_ic_tests" }
 ic-prep = { path = "../prep" }
 ic-protobuf = { path = "../protobuf" }
 ic-registry-client-fake = { path = "../registry/fake" }
@@ -31,7 +32,6 @@ ic-registry-provisional-whitelist = { path = "../registry/provisional_whitelist"
 ic-registry-subnet-type = { path = "../registry/subnet_type" }
 ic-replica = { path = "../replica" }
 ic-replicated-state = { path = "../replicated_state" }
-ic-state-machine-tests = { path = "../state_machine_tests" }
 ic-test-utilities = { path = "../test_utilities" }
 ic-test-utilities-logger = { path = "../test_utilities/logger" }
 ic-test-utilities-types = { path = "../test_utilities/types" }
