fix(IDX): mark //rs/tests:dpkg_status_noble as linux only to fix build on mac
Fix for https://github.com/dfinity/ic/actions/runs/11435432121/job/31811296612?pr=2141

--- a/rs/tests/BUILD.bazel
+++ b/rs/tests/BUILD.bazel
@@ -185,6 +185,9 @@ dpkg_status(
         "%s:control" % package
         for package in PACKAGES_NOBLE
     ],
+    target_compatible_with = [
+        "@platforms//os:linux",
+    ],
 )
 
 passwd(
