--- a/packages/pocket-ic/Cargo.toml
+++ b/packages/pocket-ic/Cargo.toml
@@ -19,6 +19,9 @@ include = [
 authors.workspace = true
 edition.workspace = true
 
+[lib]
+doctest = false
+
 [dependencies]
 base64 = { workspace = true }
 candid = "^0.10.2"
@@ -39,6 +42,9 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-appender = { workspace = true }
 tracing-subscriber = { workspace = true }
+
+[target.'cfg(windows)'.dependencies]
+wslpath = "0.0.2"
 
 [dev-dependencies]
 candid_parser = { workspace = true }
