feat(PocketIC): management canister types module (#2140)
This PR introduces a PocketIC library module containing management
canister types to avoid a dependency on the Rust CDK. This is useful to
allow canister developers bump their Rust CDK version independently of
their PocketIC library version. The names of the management canister
types follow the names in the management canister candid interface.

--- a/packages/pocket-ic/Cargo.toml
+++ b/packages/pocket-ic/Cargo.toml
@@ -24,10 +24,9 @@ doctest = false
 
 [dependencies]
 base64 = { workspace = true }
-candid = "^0.10.2"
+candid = { workspace = true }
 hex = { workspace = true }
 ic-agent = { workspace = true }
-ic-cdk = { workspace = true }
 ic-transport-types = { workspace = true }
 reqwest = { workspace = true }
 schemars = "0.8.16"
