--- a/rs/https_outcalls/adapter/Cargo.toml
+++ b/rs/https_outcalls/adapter/Cargo.toml
@@ -31,9 +31,14 @@ tower = { workspace = true }
 
 [dev-dependencies]
 async-stream = { workspace = true }
+bytes = { workspace = true }
 once_cell = "1.13.1"
 rand = { workspace = true }
+rustls = { workspace = true }
+rustls-pemfile = "2.1.2"
+rstest = { workspace = true }
 tempfile = { workspace = true }
+tokio-rustls = { workspace = true }
 uuid = { workspace = true }
 warp = { version = "0.3.7", features = ["tls"] }
 
