--- a/rs/registry/local_registry/BUILD.bazel
+++ b/rs/registry/local_registry/BUILD.bazel
@@ -12,6 +12,7 @@ DEPENDENCIES = [
     "//rs/registry/nns_data_provider",
     "//rs/registry/transport",
     "//rs/types/types",
+    "@crate_index//:parking_lot",
     "@crate_index//:thiserror",
     "@crate_index//:tokio",
     "@crate_index//:url",
@@ -19,6 +20,7 @@ DEPENDENCIES = [
 
 rust_library(
     name = "local_registry",
+    testonly = True,
     srcs = glob(["src/**/*.rs"]),
     crate_name = "ic_registry_local_registry",
     version = "0.9.0",
