--- a/rs/tests/dre/utils/Cargo.toml
+++ b/rs/tests/dre/utils/Cargo.toml
@@ -7,7 +7,6 @@ description.workspace = true
 documentation.workspace = true
 
 [dependencies]
-tests = { path = "../../" }
 ic-system-test-driver = { path = "../../driver" }
 ic-protobuf = { path = "../../../protobuf" }
 tokio.workspace = true
@@ -24,6 +23,7 @@ futures.workspace = true
 anyhow.workspace = true
 reqwest.workspace = true
 ic-types = { path = "../../../types/types" }
+xnet-slo-test-lib = { path = "../../message_routing/xnet/slo_test_lib" }
 
 [lib]
 path = "lib.rs"
