Remove src/ckbtc

--- a/rs/tests/ckbtc/Cargo.toml
+++ b/rs/tests/ckbtc/Cargo.toml
@@ -7,6 +7,8 @@ description.workspace = true
 documentation.workspace = true
 
 [dependencies]
+assert_matches = { workspace = true }
+bitcoincore-rpc = "0.15.0"
 candid = { workspace = true }
 canister-test = { path = "../../rust_canisters/canister_test" }
 dfn_candid = { path = "../../rust_canisters/dfn_candid" }
@@ -14,6 +16,7 @@ ic-agent = { workspace = true }
 ic-base-types = { path = "../../types/base_types" }
 ic-btc-interface = { workspace = true }
 ic-canister-client = { path = "../../canister_client" }
+ic-ckbtc-agent = { path = "../../bitcoin/ckbtc/agent" }
 ic-ckbtc-kyt = { path = "../../bitcoin/ckbtc/kyt" }
 ic-ckbtc-minter = { path = "../../bitcoin/ckbtc/minter" }
 ic-config = { path = "../../config" }
@@ -29,7 +32,11 @@ ic-registry-subnet-type = { path = "../../registry/subnet_type" }
 ic-system-test-driver = { path = "../../tests/driver" }
 ic-types = { path = "../../types/types" }
 ic-types-test-utils = { path = "../../types/types_test_utils" }
+ic-universal-canister = { path = "../../universal_canister/lib" }
 ic_consensus_threshold_sig_system_test_utils = { path = "../../tests/consensus/tecdsa/utils" }
 icp-ledger = { path = "../../ledger_suite/icp" }
+icrc-ledger-agent = { path = "../../../packages/icrc-ledger-agent" }
+icrc-ledger-types = { path = "../../../packages/icrc-ledger-types" }
 registry-canister = { path = "../../registry/canister" }
 slog = { workspace = true }
+tokio = { workspace = true }
