--- a/rs/nervous_system/instruction_stats/BUILD.bazel
+++ b/rs/nervous_system/instruction_stats/BUILD.bazel
@@ -8,6 +8,7 @@ DEPENDENCIES = [
     "//rs/nervous_system/histogram",
     "@crate_index//:ic-cdk",
     "@crate_index//:ic-metrics-encoder",
+    "@crate_index//:itertools",
     "@crate_index//:lazy_static",
 ]
 
