--- a/rs/nervous_system/instruction_stats/Cargo.toml
+++ b/rs/nervous_system/instruction_stats/Cargo.toml
@@ -7,4 +7,5 @@ edition = { workspace = true }
 ic-nervous-system-histogram = { path = "../histogram" }
 ic-cdk = { workspace = true }
 ic-metrics-encoder = "1"
+itertools = { workspace = true }
 lazy_static = { workspace = true }
