--- a/rs/tests/ckbtc/BUILD.bazel
+++ b/rs/tests/ckbtc/BUILD.bazel
@@ -4,42 +4,12 @@ load("//rs/tests:system_tests.bzl", "system_test_nns")
 
 package(default_visibility = ["//rs/tests:__subpackages__"])
 
-LIB_DEPENDENCIES = [
-    # Keep sorted.
-    "//rs/bitcoin/ckbtc/kyt",
-    "//rs/bitcoin/ckbtc/minter",
-    "//rs/canister_client",
-    "//rs/config",
-    "//rs/ledger_suite/icp:icp_ledger",
-    "//rs/ledger_suite/icrc1/ledger",
-    "//rs/nervous_system/common/test_keys",
-    "//rs/nns/common",
-    "//rs/nns/constants",
-    "//rs/nns/governance/api",
-    "//rs/nns/test_utils",
-    "//rs/registry/canister",
-    "//rs/registry/subnet_features",
-    "//rs/registry/subnet_type",
-    "//rs/rust_canisters/canister_test",
-    "//rs/rust_canisters/dfn_candid",
-    "//rs/tests/consensus/tecdsa/utils",
-    "//rs/tests/driver:ic-system-test-driver",
-    "//rs/types/base_types",
-    "//rs/types/management_canister_types",
-    "//rs/types/types",
-    "//rs/types/types_test_utils",
-    "@crate_index//:candid",
-    "@crate_index//:ic-agent",
-    "@crate_index//:ic-btc-interface",
-    "@crate_index//:slog",
-]
-
 rust_library(
     name = "ckbtc",
     testonly = True,
     srcs = glob(["src/**/*.rs"]),
     crate_name = "ic_tests_ckbtc",
-    deps = LIB_DEPENDENCIES,
+    deps = DEPENDENCIES,
 )
 
 CKBTC_RUNTIME_DEPS = [
@@ -70,7 +40,7 @@ system_test_nns(
         GUESTOS_RUNTIME_DEPS +
         UNIVERSAL_VM_RUNTIME_DEPS +
         CKBTC_RUNTIME_DEPS,
-    deps = DEPENDENCIES + ["//rs/tests"],
+    deps = DEPENDENCIES + [":ckbtc"],
 )
 
 system_test_nns(
@@ -92,7 +62,7 @@ system_test_nns(
         GUESTOS_RUNTIME_DEPS +
         UNIVERSAL_VM_RUNTIME_DEPS +
         CKBTC_RUNTIME_DEPS,
-    deps = DEPENDENCIES + ["//rs/tests"],
+    deps = DEPENDENCIES + [":ckbtc"],
 )
 
 system_test_nns(
@@ -114,7 +84,7 @@ system_test_nns(
         GUESTOS_RUNTIME_DEPS +
         UNIVERSAL_VM_RUNTIME_DEPS +
         CKBTC_RUNTIME_DEPS,
-    deps = DEPENDENCIES + ["//rs/tests"],
+    deps = DEPENDENCIES + [":ckbtc"],
 )
 
 system_test_nns(
@@ -137,7 +107,7 @@ system_test_nns(
         GUESTOS_RUNTIME_DEPS +
         UNIVERSAL_VM_RUNTIME_DEPS +
         CKBTC_RUNTIME_DEPS,
-    deps = DEPENDENCIES + ["//rs/tests"],
+    deps = DEPENDENCIES + [":ckbtc"],
 )
 
 system_test_nns(
@@ -160,7 +130,7 @@ system_test_nns(
         GUESTOS_RUNTIME_DEPS +
         UNIVERSAL_VM_RUNTIME_DEPS +
         CKBTC_RUNTIME_DEPS,
-    deps = DEPENDENCIES + ["//rs/tests"],
+    deps = DEPENDENCIES + [":ckbtc"],
 )
 
 system_test_nns(
@@ -183,5 +153,5 @@ system_test_nns(
         GUESTOS_RUNTIME_DEPS +
         UNIVERSAL_VM_RUNTIME_DEPS +
         CKBTC_RUNTIME_DEPS,
-    deps = DEPENDENCIES + ["//rs/tests"],
+    deps = DEPENDENCIES + [":ckbtc"],
 )
