test(IDX-3144): inline message-routing xnet systests (#2156)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -368,7 +368,10 @@ members = [
     "rs/tests/driver",
     "rs/tests/execution",
     "rs/tests/message_routing",
+    "rs/tests/message_routing/common",
     "rs/tests/message_routing/rejoin_test_lib",
+    "rs/tests/message_routing/xnet",
+    "rs/tests/message_routing/xnet/slo_test_lib",
     "rs/tests/httpbin-rs",
     "rs/tests/networking",
     "rs/tests/networking/canisters",
@@ -643,7 +646,7 @@ reqwest = { version = "0.12.7", default-features = false, features = [
     "stream",
 ] }
 rolling-file = "0.2.0"
-rsa = { version = "0.9.6", features = [ "sha2" ] }
+rsa = { version = "0.9.6", features = ["sha2"] }
 rstest = "0.19.0"
 rustc-demangle = { version = "0.1.16" }
 rustls = { version = "0.23.14", default-features = false, features = [
