--- a/rs/ic_os/dev_test_tools/launch-single-vm/Cargo.toml
+++ b/rs/ic_os/dev_test_tools/launch-single-vm/Cargo.toml
@@ -10,6 +10,7 @@ ic-prep = { path = "../../../prep" }
 ic-registry-subnet-type = { path = "../../../registry/subnet_type" }
 ic-system-test-driver = { path = "../../../tests/driver" }
 ic-types = { path = "../../../types/types" }
+config = { path = "../../config" }
 
 clap = { workspace = true }
 reqwest = { workspace = true }
