--- a/rs/tests/ckbtc/BUILD.bazel
+++ b/rs/tests/ckbtc/BUILD.bazel
@@ -38,6 +38,9 @@ DEPENDENCIES = [
     "@crate_index//:candid",
     "@crate_index//:ic-agent",
     "@crate_index//:ic-btc-interface",
+    "@crate_index//:k256",
+    "@crate_index//:rand_chacha",
+    "@crate_index//:rand",
     "@crate_index//:slog",
     "@crate_index//:tokio",
 ]
