--- a/rs/tests/networking/BUILD.bazel
+++ b/rs/tests/networking/BUILD.bazel
@@ -90,6 +90,7 @@ system_test_nns(
         "//rs/test_utilities/types",
         "//rs/types/base_types",
         "//rs/types/types",
+        "@crate_index//:tokio",
     ],
 )
 
